# zpbs-backup

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
packaging/: build-packages.sh  nfpm.yaml
packaging/scripts/: postinstall.sh  postremove.sh  preremove.sh
src/zpbs_backup/: __init__.py  backup.py  cli.py  config.py  metrics.py  notify.py  pbs.py  retention.py  scheduler.py  zfs.py
systemd/: zpbs-backup.service  zpbs-backup.timer
tests/: __init__.py  test_config.py  test_pbs.py  test_retention.py  test_scheduler.py  test_zfs.py
