[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zpbs-backup"
version = "0.1.0"
description = "ZFS property-driven Proxmox Backup Server backup tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nick DeMarco" }
]
keywords = ["zfs", "proxmox", "backup", "pbs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
zpbs-backup = "zpbs_backup.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zpbs_backup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
