[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zpbs-backup"
dynamic = ["version"]
description = "ZFS property-driven Proxmox Backup Server backup tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nick DeMarco", email = "nick@demarcohome.com" }
]
keywords = ["zfs", "proxmox", "backup", "pbs", "proxmox-backup-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "build>=1.0",
    "twine>=4.0",
]

[project.scripts]
zpbs-backup = "zpbs_backup.cli:main"

[project.urls]
Homepage = "https://github.com/ndemarco/zpbs-backup"
Documentation = "https://github.com/ndemarco/zpbs-backup#readme"
Repository = "https://github.com/ndemarco/zpbs-backup"
Issues = "https://github.com/ndemarco/zpbs-backup/issues"
Changelog = "https://github.com/ndemarco/zpbs-backup/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/zpbs_backup/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/zpbs_backup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
